--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "dependencies": {
     "@discordx/importer": "^1.1.10",
     "@discordx/pagination": "^3.3.1",
+    "body-parser": "^1.20.1",
     "discord.js": "^14.6.0",
-    "discordx": "^11.4.0"
+    "discordx": "^11.4.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.7.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "^18.11.7",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
