--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
 
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
