--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "emitDecoratorMetadata": true,
 
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false
   },
   "exclude": ["build", "node_modules"]
 }
