--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: "3"
+version: '3'
 services:
   app:
     build: .
     command: node build/main.js
-    environment:
-      - BOT_TOKEN=${BOT_TOKEN}
+    env_file: .env
