--- a/package.json
+++ b/package.json
@@ -10,30 +10,39 @@
     "build:changelog": "npx @discordx/changelog --root=src",
     "dev": "ts-node-esm src/main.ts",
     "start": "node build/main.js",
-    "watch": "nodemon --exec ts-node-esm src/main.ts"
+    "watch": "nodemon --exec ts-node-esm src/main.ts",
+    "format": "prettier --write .",
+    "format-check": "prettier --check ."
   },
   "dependencies": {
     "@discordx/importer": "^1.1.10",
-    "@discordx/pagination": "^3.3.1",
-    "axios": "^1.2.1",
+    "@discordx/pagination": "^3.4.0",
+    "@discordx/plugin-ytdl-player": "^1.2.0",
+    "axios": "^1.3.2",
     "body-parser": "^1.20.1",
-    "discord.js": "^14.6.0",
-    "discordx": "^11.4.0",
+    "discord.js": "^14.7.1",
+    "discordx": "^11.7.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/node": "^18.11.7",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
     "ts-node": "^10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "4.9.5"
   },
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=7.0.0"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "arrowParens": "avoid",
+    "singleQuote": true,
+    "tabWidth": 2
   }
 }
